@@ -474,6 +474,7 @@ All (GUI):
 - Derive wxAuiNotebook from wxBookCtrlBase (Steven Lamerton).
 - Fix tooltips in wxSearchCtrl and other composite controls (Catalin Raceanu).
 - Allow converting to and from wxGraphicsBitmap and wxImage directly.
+- Allow wxGraphicsFont creation without passing by wxFont.
 
 OSX:
 
